examples/examples/todos_api/snapshots/todos_api__tests__after_create.snap
---
source: examples/examples/todos_api/tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 10 },
    content: [
        "              ┌Input───────────────────┐╭────────╮",
        " Add a Todo   │ Add a todo             ││ submit │",
        "              └────────────────────────┘╰────────╯",
        "┌Todos───────────────────────────────────────────┐",
        "│     ╭───╮╭───╮                                 │",
        "│ 1.  │ 󱞁 ││ x │ todo 1                          │",
        "│     ╰───╯╰───╯                                 │",
        "│                                                │",
        "└────────────────────────────────────────────────┘",
        "                                                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 0, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 16, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 1, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 1, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 2, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 5, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
