examples/examples/todos_api/snapshots/todos_api__tests__click_update.snap
---
source: examples/examples/todos_api/tests.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 15 },
    content: [
        "                                                  ",
        "            ┌──────────────────────╭────────────╮ ",
        " Add a Todo │ Add a todo           │Todo updated│ ",
        "            └──────────────────────╰────────────╯ ",
        " ┌Todos─────────────────────────────────────────┐ ",
        " │    ╭───╮╭───╮                                │ ",
        " │ 1. │ 󱞁 ││ x │ todo 112                       │ ",
        " │    ╰───╯╰───╯                                │ ",
        " │                                              │ ",
        " │                                              │ ",
        " │                                              │ ",
        " │                                              │ ",
        " └──────────────────────────────────────────────┘ ",
        "                                                  ",
        "                                                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, modifier: NONE,
        x: 35, y: 1, fg: Blue, bg: Reset, modifier: NONE,
        x: 49, y: 1, fg: Reset, bg: Reset, modifier: NONE,
        x: 14, y: 2, fg: DarkGray, bg: Reset, modifier: NONE,
        x: 35, y: 2, fg: Blue, bg: Reset, modifier: NONE,
        x: 36, y: 2, fg: Reset, bg: Reset, modifier: NONE,
        x: 48, y: 2, fg: Blue, bg: Reset, modifier: NONE,
        x: 49, y: 2, fg: Reset, bg: Reset, modifier: NONE,
        x: 35, y: 3, fg: Blue, bg: Reset, modifier: NONE,
        x: 49, y: 3, fg: Reset, bg: Reset, modifier: NONE,
        x: 6, y: 5, fg: Gray, bg: Reset, modifier: NONE,
        x: 16, y: 5, fg: Reset, bg: Reset, modifier: NONE,
        x: 6, y: 6, fg: Gray, bg: Reset, modifier: NONE,
        x: 7, y: 6, fg: Reset, bg: Reset, modifier: NONE,
        x: 8, y: 6, fg: Blue, bg: Reset, modifier: NONE,
        x: 9, y: 6, fg: Reset, bg: Reset, modifier: NONE,
        x: 10, y: 6, fg: Gray, bg: Reset, modifier: NONE,
        x: 12, y: 6, fg: Reset, bg: Reset, modifier: NONE,
        x: 13, y: 6, fg: Red, bg: Reset, modifier: NONE,
        x: 14, y: 6, fg: Reset, bg: Reset, modifier: NONE,
        x: 15, y: 6, fg: Gray, bg: Reset, modifier: NONE,
        x: 16, y: 6, fg: Reset, bg: Reset, modifier: NONE,
        x: 6, y: 7, fg: Gray, bg: Reset, modifier: NONE,
        x: 16, y: 7, fg: Reset, bg: Reset, modifier: NONE,
    ]
}
