examples/examples/todos_api/snapshots/todos_api__tests__delete.snap
---
source: examples/examples/todos_api/tests.rs
expression: harness.buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 15 },
    content: [
        "                                                  ",
        "            ┌───────────────────────────┐╭──────╮ ",
        " Add a Todo │ Add a todo                ││submit│ ",
        "            └───────────────────────────┘╰──────╯ ",
        " ┌Todos─────────────────────────────────────────┐ ",
        " │No todos                                      │ ",
        " │                                              │ ",
        " │                                              │ ",
        " │                                              │ ",
        " │                                              │ ",
        " │                                              │ ",
        " │                                              │ ",
        " └──────────────────────────────────────────────┘ ",
        "                                                  ",
        "                                                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 1, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 2, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 2, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 3, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
